fix: fix align & mix compile

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -60,7 +60,7 @@ main{
     gap: 20px;
 
     flex-grow:1;
-    text-align:center;
+    /* text-align:center; */
 }
 
 footer{
